<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.NameActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dont_call_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_call_me"
            android:textSize="12sp" />

        <Space
            android:layout_width="4dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btn_thank_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>
